--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "node --watch server.js",
+    "seed": "node seed.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
