--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "node --watch server.js",
+    "dev": "node server.js",
     "seed": "node seed.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
